rocket/measurements/verilator-dual-large-v1.4-O3/sim-perf.txt
START: Current timestamp in milliseconds: 1731323119907
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-large-v1.4-O3-simperf//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-large-v1.4-O3-simperf//rocket.sv
/home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-large-v1.4-O3-simperf//rocket.fir:2:1: error: expected 'FIRRTL'
circuit RocketSystem : 
^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-large-v1.4-O3-simperf//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-large-v1.4-O3-simperf//rocket.sv':

             20.31 msec task-clock:u                     #    0.988 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,402      page-faults:u                    #  118.251 K/sec                     
        28,066,265      cycles:u                         #    1.382 GHz                         (13.54%)
         6,499,768      stalled-cycles-frontend:u        #   23.16% frontend cycles idle        (28.26%)
       151,521,059      instructions:u                   #    5.40  insn per cycle            
                                                  #    0.04  stalled cycles per insn     (43.03%)
        28,719,373      branches:u                       #    1.414 G/sec                       (57.80%)
           469,312      branch-misses:u                  #    1.63% of all branches             (72.56%)
        67,229,570      L1-dcache-loads:u                #    3.310 G/sec                       (73.79%)
         3,736,772      L1-dcache-load-misses:u          #    5.56% of all L1-dcache accesses   (71.74%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
         1,034,375      L1-icache-loads:u                #   50.923 M/sec                       (56.97%)
             7,807      L1-icache-load-misses:u          #    0.75% of all L1-icache accesses   (42.20%)
            65,448      dTLB-loads:u                     #    3.222 M/sec                       (27.44%)
            14,351      dTLB-load-misses:u               #   21.93% of all dTLB cache accesses  (12.67%)
     <not counted>      iTLB-loads:u                                                            (0.00%)
     <not counted>      iTLB-load-misses:u                                                      (0.00%)
     <not counted>      L1-dcache-prefetches:u                                                  (0.00%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.020561208 seconds time elapsed

       0.010263000 seconds user
       0.010265000 seconds sys


Some events weren't counted. Try disabling the NMI watchdog:
	echo 0 > /proc/sys/kernel/nmi_watchdog
	perf stat ...
	echo 1 > /proc/sys/kernel/nmi_watchdog
GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-large-v1.4-O3-simperf/rocket.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-large-v1.4-O3-simperf/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-large-v1.4-O3-simperf/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-large-v1.4-O3-simperf/rocket.sv.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-large-v1.4-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-large-v1.4-O3-simperf/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-large-v1.4-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-large-v1.4-O3-simperf/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-large-v1.4-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-large-v1.4-O3-simperf/rocket.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-large-v1.4-O3-simperf//rocket-vtor /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-large-v1.4-O3-simperf//rocket.sv /home/bea/Research/paper-evals/arc-tests/rocket/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             62.39 msec task-clock:u                     #    1.613 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,244      page-faults:u                    #   68.029 K/sec                     
       151,780,949      cycles:u                         #    2.433 GHz                         (56.74%)
        16,174,035      stalled-cycles-frontend:u        #   10.66% frontend cycles idle        (51.80%)
       406,125,378      instructions:u                   #    2.68  insn per cycle            
                                                  #    0.04  stalled cycles per insn     (11.39%)
        42,997,956      branches:u                       #  689.233 M/sec                       (31.11%)
         1,708,153      branch-misses:u                  #    3.97% of all branches             (42.06%)
       101,690,259      L1-dcache-loads:u                #    1.630 G/sec                       (48.97%)
         2,210,364      L1-dcache-load-misses:u          #    2.17% of all L1-dcache accesses   (48.99%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        26,577,454      L1-icache-loads:u                #  426.022 M/sec                       (49.00%)
           435,818      L1-icache-load-misses:u          #    1.64% of all L1-icache accesses   (49.00%)
           552,241      dTLB-loads:u                     #    8.852 M/sec                       (49.00%)
            22,700      dTLB-load-misses:u               #    4.11% of all dTLB cache accesses  (53.24%)
           458,251      iTLB-loads:u                     #    7.346 M/sec                       (69.72%)
            12,954      iTLB-load-misses:u               #    2.83% of all iTLB cache accesses  (64.93%)
           716,298      L1-dcache-prefetches:u           #   11.482 M/sec                       (60.13%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.038685480 seconds time elapsed

       0.020588000 seconds user
       0.041473000 seconds sys


GROUP: verilator SUBGROUP: clang
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
